plugins {
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'AA'
version = '0.0.1'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	runtimeOnly 'org.postgresql:postgresql:42.3.3'

	//runtimeOnly 'com.h2database:h2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
  systemProperties = ['POSTGRES_PASSWORD': 'password', 'POSTGRES_USERNAME': 'postgers', 'POSTGRES_URI': 'jdbc:postgresql://localhost:5432/postgres']

  //environment env
}

tasks.named('test') {
	useJUnitPlatform()
}
